--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "KHAN-MD",
+  "name": "Chaudhry",
   "version": "4.5.0",
-  "description": "A WhatsApp Bot Created By JawadTechX",
+  "description": "A WhatsApp Bot Created By Ahsan",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name KHAN-MD",
-    "stop": "pm2 stop KHAN-MD",
-    "restart": "pm2 restart KHAN-MD"
+    "start": "pm2 start index.js --deep-monitoring --attach --name Chaudhry",
+    "stop": "pm2 stop Chaudhry",
+    "restart": "pm2 restart Chaudhry"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.7.1",
